--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf_8">
+    <title>Title of the document</title>
+  </head>
 
+  <body>
+    <h1>The content of the document......</h1>
+    <p class= "p-welcome"> Welcome to my personal....</p>
+  </body>
+
+</html>
