--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>The content of the document......</h1>
     <p class= "p-welcome"> Welcome to my personal....</p>
+    <a href="Module_1.html"> Tutorials for basic Python Basics</a>
   </body>
 
 </html>
