--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
   </head>
 
   <body>
-    <h1>The content of the document......</h1>
-    <p class= "p-welcome"> Welcome to my personal....</p>
+    <h1>PLSC 380 Python Course</h1>
+    <p class= "p-welcome"> Welcome to PLSC 380 Python Course. This page contains some of the notebooks that I created for teaching the course at Binghamton University!
+      The course is designed for undergraduates and beginners, and it provides a practical introduction to Python and its key libraries, such as NumPy, Pandas, Matplotlib, Seaborn, Plotly, Geopandas.
+      These codebooks offer a comprehensive and hands-on learning experience.</p>
+
+    <h2>Table of Content</h2>
+    <a href="Module_1.html"> Tutorials for basic Python Basics</a>
+    <a href="Module_1.html"> Tutorials for basic Python Basics</a>
+    <a href="Module_1.html"> Tutorials for basic Python Basics</a>
+    <a href="Module_1.html"> Tutorials for basic Python Basics</a>
+    <a href="Module_1.html"> Tutorials for basic Python Basics</a>
+    <a href="Module_1.html"> Tutorials for basic Python Basics</a>
+    <a href="Module_1.html"> Tutorials for basic Python Basics</a>
     <a href="Module_1.html"> Tutorials for basic Python Basics</a>
   </body>
 
