--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
     
     <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
+    <a href="Module_2.html" target="_blank"> Tutorials for basic Python Basics</a>
+    <a href="Module_2b.html" target="_blank"> Tutorials for basic Python Basics</a>
+    <a href="Module_3_numy.html" target="_blank"> Tutorials for basic Python Basics</a>
+    <a href="Module_3_Pandas.html" target="_blank"> Tutorials for basic Python Basics</a>
+    <a href="Module_3_Statsmodels.html" target="_blank"> Tutorials for basic Python Basics</a>
+    <a href="Module_4_Python_Visualization_Matplotlib.html" target="_blank"> Tutorials for basic Python Basics</a>
+    <a href="Module_4_Python_Data_Visualization_Seaborn.html" target="_blank"> Tutorials for basic Python Basics</a>
+    <a href="Module_4_Python_Visualization_Plotly.html" target="_blank"> Tutorials for basic Python Basics</a>
+    <a href="Module_4_Geospatial_Data_Visualization.html" target="_blank"> Tutorials for basic Python Basics</a>
+
 
 
   </body>
