--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <h2>Table of Content</h2>
     <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
     
-    <a href="Module_1.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_2.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_2b.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_3_numy.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_3_Pandas.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_3_Statsmodels.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_4_Python_Visualization_Matplotlib.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_4_Python_Data_Visualization_Seaborn.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_4_Python_Visualization_Plotly.html" target="_blank"> Tutorials for basic Python Basics</a>
-    <a href="Module_4_Geospatial_Data_Visualization.html" target="_blank"> Tutorials for basic Python Basics</a>
+    Learn Python basics from this <a href="Module_1.html" target="_blank"> link.</a>
+    Some more Python basics <a href="Module_2.html" target="_blank"> here.</a>
+    Python Built-in functions <a href="Module_2b.html" target="_blank"> here.</a>
+    Numpy <a href="Module_3_numy.html" target="_blank"> here.</a>
+    Pandas <a href="Module_3_Pandas.html" target="_blank"> here.</a>
+    Statsmodels <a href="Module_3_Statsmodels.html" target="_blank"> here.</a>
+    Matplotlib <a href="Module_4_Python_Visualization_Matplotlib.html" target="_blank"> here.</a>
+    Seaborn <a href="Module_4_Python_Data_Visualization_Seaborn.html" target="_blank"> here.</a>
+    Plotly <a href="Module_4_Python_Visualization_Plotly.html" target="_blank"> here.</a>
+    Geospatial Data Analysis <a href="Module_4_Geospatial_Data_Visualization.html" target="_blank"> here. </a>
 
 
 
